# integra-desktop

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PATCH_NOTES_LEGADO_FATURAS_EXPORTACAO.md  PATCH_NOTES_LICENSING_COMPONENT.md  PATCH_NOTES_LICENSING_COMPONENT_V2.md  PATCH_NOTES_LICENSING_EXTENDED.md  PATCH_NOTES_LICENSING_NO_STARTUP_CMD.md  PATCH_NOTES_LICENSING_STARTUP_COMPAT.md  PATCH_NOTES_REGISTRO_INICIAL_E_PERFIS.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  release.config.mjs  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: LICENSING_EXTENDED.md  RELEASES.md  SECRETS.md  index.html  licensing-startup-args.md  styles.css
public/: site.webmanifest
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/generic-license-tauri/: Cargo.toml  README.md
src-tauri/generic-license-tauri/src/: cache.rs  client.rs  commands.rs  device.rs  error.rs  lib.rs  models.rs  registration.rs  service.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  files.rs  licensing.rs  logs.rs  mod.rs  nfe_faturas.rs  process.rs  settings.rs
src-tauri/src/core/: local_license.rs  mod.rs  startup.rs
src-tauri/src/core/domain/: document.rs  installment.rs  license.rs  mod.rs  party.rs  taxes.rs
src-tauri/src/core/exporters/: csv.rs  mod.rs  sped_c140_c141.rs  standard_xml.rs  txt_fixed.rs
src-tauri/src/core/mappers/: mod.rs  prosoft_faturas.rs  prosoft_servicos_prestados.rs  prosoft_servicos_prestados_sp.rs  prosoft_servicos_tomados.rs
src-tauri/src/core/normalizers/: mod.rs  nfe_normalizer.rs  nfse_normalizer.rs
src-tauri/src/core/parsers/: legado_pipe.rs  mod.rs  nfe.rs  sped.rs  zip.rs
src-tauri/src/core/parsers/nfse/: abrasf_v1.rs  abrasf_v2.rs  betha.rs  detector.rs  generic_fallback.rs  ginfes.rs  mod.rs
src-tauri/src/core/validation/: mod.rs  rules.rs  warnings.rs
src-tauri/src/storage/: app_settings.rs  license.rs  logs.rs  mod.rs  nfe_faturas_settings.rs  profiles.rs  recent_files.rs  templates.rs
(+56 files in other folders)
