[package]
name = "integra-desktop"
version = "1.3.0"
edition = "2021"

[lib]
name = "integra_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.21"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

base64 = "0.22"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
hostname = "0.4"
